--- a/api/nginx.conf
+++ b/api/nginx.conf
@@ -6,7 +6,12 @@ http {
   server_tokens off;
   server {
     listen 80;
-    root /var/www;
+
+    location / {
+      proxy_set_header X-Forwarded-For $remote_addr;
+      proxy_set_header Host            $http_host;
+      proxy_pass http://dashboard:3000/;
+    }
 
     location /api/ {
       proxy_set_header X-Forwarded-For $remote_addr;
