added docker-compose.yml for the web app dashboard service

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -15,6 +15,13 @@ services:
     deploy:
       replicas: 5
 
+  dashboard:
+    image: dashboard
+    networks:
+      - api_network
+    external_links:
+      - api
+
   redis-gwgin:
     image: redis
     networks:
